crys3d.log
*** Error compiling 'crys3d/command_line/model_viewer.py'...
  File "crys3d/command_line/model_viewer.py", line 51
    print "Please specify a PDB file (and optional CIFs) on the command line."
                                                                             ^
SyntaxError: invalid syntax

*** Error compiling 'crys3d/command_line/multiplicity_viewer.py'...
  File "crys3d/command_line/multiplicity_viewer.py", line 108
    except Exception, e :
                    ^
SyntaxError: invalid syntax

*** Error compiling 'crys3d/command_line/qttbx.view_structure.py'...
  File "crys3d/command_line/qttbx.view_structure.py", line 17
    print "%s not found" % name
                       ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(t "%s not found" % name)?

*** Error compiling 'crys3d/command_line/visualize_r_factors.py'...
  File "crys3d/command_line/visualize_r_factors.py", line 27
    except Exception, e :
                    ^
SyntaxError: invalid syntax

*** Error compiling 'crys3d/hklview/cmdlineframes.py'...
  File "crys3d/hklview/cmdlineframes.py", line 192
    print varname + " " + myvar
                ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int varname + " " + myvar)?

*** Error compiling 'crys3d/hklview/comparison.py'...
  File "crys3d/hklview/comparison.py", line 23
    print hkl, value_1, value_2
            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int hkl, value_1, value_2)?

*** Error compiling 'crys3d/hklview/frames.py'...
  File "crys3d/hklview/frames.py", line 272
    print hkl, value
            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int hkl, value)?

*** Error compiling 'crys3d/reverse_selection.py'...
  File "crys3d/reverse_selection.py", line 204
    except Exception, e :
                    ^
SyntaxError: invalid syntax

*** Error compiling 'crys3d/ribbon.py'...
  File "crys3d/ribbon.py", line 53
    print "%d segments" % len(self._segments)
                      ^
SyntaxError: invalid syntax

*** Error compiling 'crys3d/wx_extra.py'...
  File "crys3d/wx_extra.py", line 329
    print "Click in 'Header'"
                            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "Click in 'Header'")?

*** Error compiling 'crys3d/wx_model_viewer.py'...
  File "crys3d/wx_model_viewer.py", line 653
    print model_id, show_object
                 ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print model_id, show_object)?

*** Error compiling 'crys3d/wx_selection_editor.py'...
  File "crys3d/wx_selection_editor.py", line 426
    print "%s (%s)" % (selection_string, atom_selection.iselection().size())
                  ^
SyntaxError: invalid syntax

